# cv_fit_engine

./: .gitignore  README.md  pyproject.toml  run.py  smoke.py
configs/: app.yaml  base_packs.yaml  privacy.yaml  role_profiles.yaml  scoring.yaml  tag_vocab.yaml
data/forms/template/: resume_form_template.yaml
data/forms/users/: resume_form_sowjanya.yaml
data/overlays/: sample_overlay.yaml  test_overlay.yaml
data/profiles/: example_profile.yaml
docs/: design.md  schema.md
public/: app.js  index.html  profile.js  profile.js.bak
src/: app.py
src/cvfitengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cvfitengine/cli/: main.py
src/cvfitengine/core/: base_packs.py  context_builder.py  load.py  overlay_io.py  overlay_types.py  render_context.py  role_profiles.py  types.py
src/cvfitengine/parsing/: jd_classifier.py  jd_parser.py  tag_extractor.py
src/cvfitengine/rendering/: latex.py  pdf.py
src/cvfitengine/scoring/: score.py
src/cvfitengine/selection/: select.py
src/cvfitengine/ui/: streamlit_app.py
templates/latex/: cv.tex.j2
